feat: styled buttons and p

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     Doutor<br>
                     <span>Pet</span>
                 </h1>
-                <p>fortecelemos no corre do seu pet :) </p>
+                <p>Fortecelemos no corre do seu pet :) </p>
                 <p>
                     O Ingaloko oferece total segurança e visão de futuro para seu pet e seus clientes,
                      ajudando a melhorar a trajetória de suas vidas
                 </p>
 
-                <button>Saiba mais</button>
+                <button>Saiba Mais! <img src="./img/seta-circular-direita-branca.png" alt="icone de seta "></button>
             </div>
         </section>
     </main>
