--- a/index.html
+++ b/index.html
@@ -42,6 +42,30 @@
                 <button>Saiba Mais! <img src="./img/seta-circular-direita-branca.png" alt="icone de seta "></button>
             </div>
         </section>
+        <section class="container-icons">
+            <p>Introdução</p>
+            <h3>Entenda o nosso corre</h3> 
+            <article>
+                <div>
+                    <img src="./img/casadog.png" alt="">
+                    <h4>Especialistas em animais de estimação</h4>
+                    <p>O Ingaloko é o futuro do seu pet</p>
+                    <button style="color: #ffc737; border-color: #ffc737;" >consulte mais informacoes</button>
+                </div>
+                <div>
+                    <img src="./img/racaopet.png" alt="">
+                    <h4>Serviços veterinários</h4>
+                    <p>O Ingaloko é o futuro do seu pet</p>
+                    <button style="color: #e72525; border-color: #e72525;" >consulte mais informacoes</button>
+                </div>
+                <div>
+                    <img src="img/shampoo.png" alt="">
+                    <h4>Contate-nos</h4>
+                    <p>O Ingaloko é o futuro do seu pet</p>
+                    <button style="color: #257ae7; border-color: #257ae7;" >consulte mais informacoes</button>
+                </div>          
+            </article> 
+        </section>
     </main>
 </body>
 </html>
